# supermail

./: .dockerignore  .gitignore  README.md  __init__.py  client.py  env.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  sys_prompt.py
server/: __init__.py  app.py  environment.py  play_environment.py
tasks/: __init__.py  base.py  email_easy.py  email_hard.py  email_medium.py
